--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
-    <body>
-    <h1>Incelcore's Front Page</h1>
-    </body>
+    <title>Autistic Front</title>
   </head>
+  <body>
+    <h1>Incelcore's Front Page</h1>
+  </body>
 </html>  
