--- a/index.html
+++ b/index.html
@@ -1,8 +1,74 @@
-<html>
-  <head>
-    <title>Autistic Front</title>
-  </head>
-  <body>
-    <h1>Incelcore's Front Page</h1>
-  </body>
-</html>  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Autistic Front</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the content */
+.content {
+  background-color: #ddd;
+  padding: 10px;
+  height: 200px; /* Should be removed. Only for demonstration */
+}
+
+/* Style the footer */
+.footer {
+  background-color: #f1f1f1;
+  padding: 10px;
+}
+</style>
+</head>
+<body>
+
+<div class="topnav">
+  <a href="#">Main</a>
+  <a href="#">Artists</a>
+  <a href="#">Shows</a>
+  <a href="#">Tours</a>
+  <a href="#">Forum</a>
+</div>
+
+<div class="content">
+  <h2>AUTISTIC FRONT</h2>
+  <p>Incelcore's front page</p>
+</div>
+
+<div class="footer">
+  <p>Footer</p>
+</div>
+
+</body>
+</html>
