--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ body {
   <a href="#">Shows</a>
   <a href="#">Tours</a>
   <a href="#">Forum</a>
+  <a href="#">(sanhedrin)</a>
 </div>
 
 <div class="content">
