--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 <body>
 
 <div class="topnav">
-  <a href="#">Main</a>
-  <a href="#">Artists</a>
+  <a href="#index">Main</a>
+  <a href="#artists">Artists</a>
   <a href="#">Shows</a>
   <a href="#">Tours</a>
   <a href="#">Forum</a>
