--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
 <body>
 
 <div class="topnav">
-  <a href="#index">Main</a>
-  <a href="#artists">Artists</a>
-  <a href="#">Shows</a>
-  <a href="#">Tours</a>
-  <a href="#">Forum</a>
-  <a href="#">(sanhedrin)</a>
+  <a href="index">Main</a>
+  <a href="artists">Artists</a>
+  <a href="merch">Merch</a>
+  <a href="shows">Shows</a>
+  <a href="tours">Tours</a>
+  <a href="forum">Forum</a>
+  <a href="sanhedrin">(sanhedrin)</a>
 </div>
 
 <div class="content">
